# shah

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
example-client/: Cargo.toml
example-client/src/: main.rs  main.rs.old
example-db/: Cargo.toml
example-db/src/: detail.rs  extra.rs  legacy.rs  lib.rs  logger.rs  main.rs  map.rs  models.rs  note.rs  old.main.rs  old.models.rs  phone.rs  post.rs  user.rs  username.rs
shah/: Cargo.toml
shah-macros/: Cargo.toml
shah-macros/src/: api.rs  belt.rs  command.rs  duck.rs  entity.rs  enum_code.rs  enum_int.rs  flags.rs  legacy.rs  lib.rs  model.rs  perms.rs  pond.rs  routes.rs  schema.rs
shah-macros/src/utils/: args.rs  ez_trait.rs  mod.rs  traitor.rs
shah-macros/tests/: mod.rs  model.rs  perms.rs
shah/src/: binary.rs  config.rs  dead_list.rs  entity.rs  error.rs  exp.rs  lib.rs  models.rs  perms.rs  schema.rs  server.rs  signals.rs  state.rs  taker.rs  utils.rs
shah/src/db/: brood.rs  entity.rs  mod.rs  pond.rs  snake.rs  trie_const.rs
shah/src/db/apex/: api.rs  coords.rs  mod.rs
shah/src/db/belt/: belt.rs  belt_api.rs  buckle.rs  cloth.rs  mod.rs  options.rs
shah/src/db/entity/: face.rs  koch.rs  meta.rs  migration.rs  mod.rs  task.rs
shah/src/db/entity/db/: api.rs  dead.rs  init.rs  mod.rs  options.rs  public.rs  util.rs  work.rs
shah/src/db/pond/: api_item.rs  api_origin.rs  api_pond.rs  index.rs  init.rs  mod.rs  options.rs  public.rs  util.rs
shah/src/db/snake/: api.rs  free.rs  mod.rs
shah/src/db/trie/: meta.rs  mod.rs
shah/src/db/trie_const/: meta.rs  mod.rs
shah/src/models/: api.rs  binary.rs  db.rs  dead_list.rs  gene.rs  menum.rs  mod.rs  perms.rs  progress.rs  schema.rs  server.rs  state.rs  string.rs  task_list.rs
shah/tests/: enum_int.rs  model.rs
