[workspace]
members = ["shah", "shah-macros", "example-db", "example-client"]
resolver = "2"

[workspace.package]
edition = "2024"
license-file = "./LICENSE"
repository = "https://github.com/00-team/shah/"
readme = "./README.md"
keywords = ["database", "shah", "custom-database"]
categories = ["database"]
