[package]
name = "shah-macros"
version = "1.6.0"
description = "shah db macros"
publish = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
license-file.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.72", features = ["full", "extra-traits"] }
quote = "1.0.36"
quote_into = "0.2.0"
proc-macro2 = "1.0.86"
# proc-macro-crate = "3.1.0"

# [lints.rust]
# dead_code = "allow"
# unused = "allow"
