[package]
name = "shah"
version = "0.1.1"
description = "custom database"
publish = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
license-file.workspace = true

[dependencies]
# shah-macros = "0.1.0"
shah-macros = { path = "../shah-macros" }
log = "0.4.22"

# [lints.rust]
# dead_code = "allow"
# unused = "allow"
