[package]
name = "shah"
version = "0.2.2"
description = "custom database"
publish = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
license-file.workspace = true

[dependencies]
# shah-macros = "0.2.1"
shah-macros = { path = "../shah-macros" }
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"], optional = true }
faster-hex = { version = "0.10.0", optional = true, default-features = false }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:faster-hex"]

# [lints.rust]
# dead_code = "allow"
# unused = "allow"
