[package]
name = "shah"
version = "1.15.0"
description = "custom database"
publish = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
license-file.workspace = true

[dependencies]
shah-macros = "1.5.0"
# shah-macros = { path = "../shah-macros" }

log = "0.4.22"
libc = "0.2.169"
signal-hook = "0.3.17"

serde = { version = "1.0.210", features = ["derive"], optional = true }
faster-hex = { version = "0.10.0", optional = true, default-features = false }
utoipa = { version = "5.3.1", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:faster-hex", "dep:utoipa"]

[lints.clippy]
needless_return_with_question_mark = "allow"

# [lints.rust]
# dead_code = "allow"
# unused = "allow"
